Use Mockito as agent on Java 21+