@@ -84,6 +84,7 @@
     <maven.install.plugin.version>3.1.3</maven.install.plugin.version>
     <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
     <buildnumber.plugin.version>3.2.1</buildnumber.plugin.version>
+    <maven-dependency-plugin.version>3.8.0</maven-dependency-plugin.version>
     <maven.surefire.plugin.version>3.5.0</maven.surefire.plugin.version>
     <maven.failsafe.plugin.version>3.5.0</maven.failsafe.plugin.version>
     <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
@@ -272,6 +273,19 @@
           <execution>
             <goals>
               <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>${maven-dependency-plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
             </goals>
           </execution>
         </executions>
@@ -492,15 +506,23 @@
       </properties>
     </profile>
     <profile>
+      <id>jvm-test-arguments-below-java-21</id>
+      <activation>
+        <jdk>[11,21)</jdk>
+      </activation>
+      <properties>
+        <test-arguments>-Xshare:off</test-arguments>
+      </properties>
+    </profile>
+    <profile>
       <id>jvm-test-arguments-java-21-and-more</id>
       <activation>
         <jdk>[21,)</jdk>
       </activation>
       <properties>
-        <test-arguments>-XX:+EnableDynamicAgentLoading</test-arguments>
+        <test-arguments>-Xshare:off -javaagent:${org.mockito:mockito-core:jar}</test-arguments>
       </properties>
     </profile>
-
 
     <profile>
       <id>extensions</id>
